contaminationstatus tabelle bearbeitet zu jointabelle, funktioniert nur wenn alle attribute eingegeben sind

--- a/app/views/agents/_tableagents.html.erb
+++ b/app/views/agents/_tableagents.html.erb
@@ -2,20 +2,20 @@
   <table class="table table-striped table-bordered table-hover ">
 	  <thead>
 	    <tr>
-	      <th>A common name</th>
-	      <th>A family</th>
-	      <th>A genus</th>
-	      <th>A species</th>
+	      <th>Agent common name</th>
+	      <th>Agent family</th>
+	      <th>Agent genus</th>
+	      <th>Agent species</th>
 	      <th>Subspecies</th>
 	      <th>Serovar</th>
 	      <th>Other agent name</th>
-	      <th>Ref number</th>
-	      <th>Rate of illness</th>
-	      <th>Morbidity</th>
-	      <th>Mortality</th>
+	      <th>Reference number</th>
+	      <th>Rate of illness (%)</th>
+	      <th>Morbidity (%)</th>
+	      <th>Mortality (%)</th>
 	      <th>Isolation source</th>
 	      <th>Natural occurence</th>
-	      <th>A comment</th>
+	      <th>Agent comment</th>
 	      <th>Reference</th>
 	      <th>User</th>
 	      <th></th>
