--- a/app/views/contaminationstatuses/index.html.erb
+++ b/app/views/contaminationstatuses/index.html.erb
@@ -4,8 +4,8 @@
 
 
       <div class="page-header">          
-        <h1>Listing all contaminationstatus <br>
-          <small><%= pluralize(@contaminationstatuses.count, "Contaminationstatus") %></small></h1>
+        <h1>Listing all Items <br>
+          <small><%= pluralize(@contaminationstatuses.count, "Item") %></small></h1>
       </div>
 
       <div class="col-md-3" id="leftCol">
