--- a/app/views/detections/_tabledetections.html.erb
+++ b/app/views/detections/_tabledetections.html.erb
@@ -3,12 +3,12 @@
   
 		<thead>
 		    <tr>
-		      <th>D short name</th>
-		      <th>D long name</th>
-		      <th>D method validated for condiments</th>
-		      <th>D process description</th>
-		      <th>D weight of sample</th>
-		      <th>D weight of sample unit</th>
+		      <th>Detection short name</th>
+		      <th>Detection long name</th>
+		      <th>Detection method validated for condiments</th>
+		      <th>Detection process description</th>
+		      <th>Detection weight of sample</th>
+		      <th>Detection weight of sample unit</th>
 		      <th>Detection method dilution</th>
 		      <th>Detection method type</th>
 		      <th>Duration until result</th>
@@ -19,13 +19,13 @@
 		      <th>Technique</th>
 		      <th>Verification</th>
 		      <th>Interpretation</th>
-		      <th>D device needed</th>
+		      <th>Detection device needed</th>
 		      <th>Method for comparison</th>
-		      <th>Lod</th>
-		      <th>Sensitivity</th>
-		      <th>Specifity</th>
+		      <th>LOD</th>
+		      <th>Sensitivity (%)</th>
+		      <th>Specifity (%)</th>
 		      <th>Reliability score</th>
-		      <th>D comment</th>
+		      <th>Detection comment</th>
 		      <th>Reference</th>
 		      <th>User</th>
 		      <th></th>
