--- a/app/views/matrices/_tablematrices.html.erb
+++ b/app/views/matrices/_tablematrices.html.erb
@@ -2,9 +2,9 @@
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
-	      <th>M common name</th>
-	      <th>M genus</th>
-	      <th>M species</th>
+	      <th>Matrix common name</th>
+	      <th>Matrixatrix genus</th>
+	      <th>Matrix species</th>
 	      <th>Other matrix name</th>
 	      <th>Plant part</th>
 	      <th>Storage form</th>
@@ -15,14 +15,14 @@
 	      <th>Temperature during harvest</th>
 	      <th>Pre treatment</th>
 	      <th>Sampling date</th>
-	      <th>M ph</th>
-	      <th>M aw</th>
+	      <th>Matrixatrix pH</th>
+	      <th>Matrix available water</th>
 	      <th>Humidity of matrix</th>
-	      <th>Ash</th>
-	      <th>Sand</th>
-	      <th>Lipids</th>
+	      <th>Ash (%)</th>
+	      <th>Sand (%)</th>
+	      <th>Lipids (%)</th>
 	      <th>Further ingredients</th>
-	      <th>M comment</th>
+	      <th>Matrix comment</th>
 	      <th>Reference</th>
 	      <th>User</th>
 	      <th></th>
