--- a/app/views/results/_tableresults.html.erb
+++ b/app/views/results/_tableresults.html.erb
@@ -7,7 +7,7 @@
 	      <th>Detectability</th>
 	      <th>Cfu detected</th>
 	      <th>Cfu detected unit</th>
-	      <th>R comment</th>
+	      <th>Result comment</th>
 	      <th></th>
 	      <th></th>
 	    </tr>
