--- a/app/views/results/index.html.erb
+++ b/app/views/results/index.html.erb
@@ -4,7 +4,7 @@
 
 
       <div class="page-header">          
-        <h1>Listing all Concentration Results <br>
+        <h1>Listing all Concentration Results (other than Tenacity)<br>
           <small><%= pluralize(@results.count, "Concentration") %></small></h1>
       </div>
 
