--- a/app/views/samplepreparations/_tablesamplepreps.html.erb
+++ b/app/views/samplepreparations/_tablesamplepreps.html.erb
@@ -2,27 +2,27 @@
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
-	      <th>Samprep short name</th>
-	      <th>Samprep long name</th>
-	      <th>Samprep method validated for condiments</th>
-	      <th>Samprep process description</th>
-	      <th>Spik weight of sample</th>
-	      <th>Spik weight of sample unit</th>
-	      <th>Dilution fuid</th>
+	      <th>Sampreparationaration short name</th>
+	      <th>Sampreparation long name</th>
+	      <th>Sampreparation method validated for condiments</th>
+	      <th>Sampreparation process description</th>
+	      <th>Sampreparation weight of sample</th>
+	      <th>Sampreparation weight of sample unit</th>
+	      <th>Dilution fluid</th>
 	      <th>First dilution ratio</th>
 	      <th>Homogenize with</th>
 	      <th>Enrichment</th>
-	      <th>Dna extraction</th>
-	      <th>Rna extraction</th>
+	      <th>DNA extraction</th>
+	      <th>RNA extraction</th>
 	      <th>Protein extraction</th>
 	      <th>Homogenizing method</th>
 	      <th>Cell lysis</th>
 	      <th>Applied kit</th>
-	      <th>Other samprep method type</th>
-	      <th>Samprep method type details text</th>
-	      <th>Samprep duration</th>
-	      <th>Samprep duration unit</th>
-	      <th>Samprep comment</th>
+	      <th>Other Sampreparation method type</th>
+	      <th>Sampreparation method type details text</th>
+	      <th>Sampreparation duration</th>
+	      <th>Sampreparation duration unit</th>
+	      <th>Sampreparation comment</th>
 	      <th>Reference</th>
 	      <th>User</th>
 	      <th></th>
