--- a/app/views/samplepreparations/show.html.erb
+++ b/app/views/samplepreparations/show.html.erb
@@ -128,7 +128,7 @@
 
               <p>
                 <strong>Reference:</strong>
-                <%= @samplepreparation.reference.year %>
+                <%= @samplepreparation.reference.year if @samplepreparation.reference %>
               </p>
 
               <p>
