--- a/app/views/spikings/_tablespikings.html.erb
+++ b/app/views/spikings/_tablespikings.html.erb
@@ -2,10 +2,10 @@
   <table class="table table-striped table-bordered table-hover ">
   	<thead>
 	    <tr>
-	      <th>Spik short name</th>
-	      <th>Spik long name</th>
-	      <th>Spik process description</th>
-	      <th>Spik device needed</th>
+	      <th>Spiking short name</th>
+	      <th>Spiking long name</th>
+	      <th>Spiking process description</th>
+	      <th>Spiking device needed</th>
 	      <th>Pros</th>
 	      <th>Cons</th>
 	      <th>Reference</th>
