--- a/app/views/spikings/show.html.erb
+++ b/app/views/spikings/show.html.erb
@@ -52,7 +52,7 @@
 
               <p>
                 <strong>Reference:</strong>
-                <%= @spiking.reference.year %>
+                <%= @spiking.reference.year if @spiking.reference%>
               </p>
 
               <p>
