--- a/app/views/tenacities/_tabletenacities.html.erb
+++ b/app/views/tenacities/_tabletenacities.html.erb
@@ -4,7 +4,7 @@
 	    <tr>
 	      <th>Total sample number</th>
 	      <th>Inoculum concentration initial</th>
-	      <th>I concentration unit</th>
+	      <th>Concentration unit</th>
 	      <th>Reference</th>
 	      <th>User</th>
 	      <th></th>
