--- a/app/views/treatments/_tabletreatments.html.erb
+++ b/app/views/treatments/_tabletreatments.html.erb
@@ -3,24 +3,24 @@
     
       <thead>
         <tr>
-          <th>Temperature</th>
-          <th>Temperature in degree</th>
-          <th>Steam</th>
-          <th>Steam in percent</th>
-          <th>Fumigation gas</th>
-          <th>Fumigation gas in percent</th>
-          <th>Optical</th>
-          <th>Mechanical</th>
+          <th>Temperature treatment</th>
+          <th>Temperature (°C)</th>
+          <th>Steam treatment</th>
+          <th>Steam (°C)</th>
+          <th>Treatment wiht fumigation gas</th>
+          <th>Fumigation (°C)</th>
+          <th>Optical treatment</th>
+          <th>Mechanical treatment</th>
           <th>Process type</th>
-          <th>T ph</th>
+          <th>Treatment ph</th>
           <th>Pressure</th>
           <th>Kgy dose</th>
-          <th>T aw</th>
-          <th>Water activity</th>
+          <th>Treatment available water</th>
+          <th>Treatment water activity</th>
           <th>Other condition</th>
-          <th>Treat duration</th>
-          <th>Treat duration unit</th>
-          <th>T comment</th>
+          <th>Treatment duration</th>
+          <th>Treatment duration unit</th>
+          <th>Treatment comment</th>
           <th>Reference</th>
           <th>User</th>
           <th>Matrix</th>
