--- a/app/views/tenacities/show.html.erb
+++ b/app/views/tenacities/show.html.erb
@@ -37,7 +37,7 @@
 
               <p>
                 <strong>Reference:</strong>
-                <%= @tenacity.reference.year %>
+                <%= @tenacity.reference %>
               </p>
 
               <p>
