--- a/app/views/treatments/_form.html.erb
+++ b/app/views/treatments/_form.html.erb
@@ -53,7 +53,7 @@
         <%= f.collection_select :admintreatmentprocesstype_id, Admintreatmentprocesstype.all.order(:process_type), :id, :process_type, {include_blank: true}, {class: "form-control"} %>
       </div>
       <div class="field">
-        <%= f.label :t_ph %><br>
+        <%= f.label :"Treatment pH" %><br>
         <%= f.text_field :t_ph %>
       </div>
       <div class="field">
@@ -65,7 +65,7 @@
         <%= f.text_field :kgy_dose %>
       </div>
       <div class="field">
-        <%= f.label :t_aw %><br>
+        <%= f.label :"Treatment available water" %><br>
         <%= f.text_field :t_aw %>
       </div>
       <div class="field">
@@ -85,7 +85,7 @@
         <%= f.text_field :treat_duration_unit %>
       </div>
       <div class="field">
-        <%= f.label :t_comment %><br>
+        <%= f.label :"Treatment comment" %><br>
         <%= f.text_area :t_comment %>
       </div>
       <div class="field">
