--- a/app/views/references/_tablereferences.html.erb
+++ b/app/views/references/_tablereferences.html.erb
@@ -18,7 +18,7 @@
 	      <th>Sample prep</th>
 	      <th>Detection</th>
 	      <th>Tenacity</th>
-	      <th>R comment</th>
+	      <th>Reference comment</th>
 	      <th>User</th>
 	      <th></th>
 	      <th></th>
