--- a/app/views/home/admin.html.erb
+++ b/app/views/home/admin.html.erb
@@ -4,20 +4,16 @@
 
 
       <div class="page-header">          
-        <h1>Insert New Data in AdminMatrices</h1>
+        <h1>Insert and Show Template Data</h1>
       </div>
 
 		  <div class="col-md-3" id="leftCol">
-		  	<div class="well">  	
-			    <%= render 'layouts/sidebar_insert' %>
-				</div>
-				<div class="well">  	
-		  		<h3>Admin</h3>  	
+				<div class="well">  		
 			    <%= render 'layouts/sidebar_insert_admin' %>
 				</div>
 	    </div>		 
 
-		  <div class="col-md-9" id="rightCol">		  		
+		  <div class="col-md-6">		  		
 				<div class="well">          
 				  <div class="panel panel-info">
 				    <div class="panel-body">	
@@ -29,6 +25,11 @@
 				</div>		
 			</div>
 
+			<div class="col-md-3" id="leftCol">
+				<div class="well">  		
+			    <%= render 'layouts/sidebar_show_admin' %>
+				</div>
+	    </div>
 
 		</div>		 
   </div>
