--- a/app/views/matrices/_form.html.erb
+++ b/app/views/matrices/_form.html.erb
@@ -102,7 +102,7 @@
   </div>
   <div class="field">
     <%= f.label :reference_id %><br>
-    <%= f.select :reference_id, Reference.all.collect {|c| [ [c.first_author_name, c.year, c.title], c.id ] }, { :include_blank => true, :selected => @matrix.reference_id}, class: "form-control" %>
+    <%= f.select :reference_id, Reference.all.collect {|c| [ c.full_ref, c.id ] }, { :include_blank => true, :selected => @matrix.reference_id}, class: "form-control" %>
   </div> 
   <div class="field">
     <%= f.label :user_id %><br>
